# CMakeProject_Template_1

./: CMakeLists.txt  README.md  build.bat  build.sh
apps/: CMakeLists.txt
apps/src/: app.cpp
core/: CMakeLists.txt
core/include/core_include/: core.h
core/src/: core.cpp
